updated modfide the desgin

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,16 @@
     
     <!-- FontAwesome for icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+    <link
+  href="https://fonts.googleapis.com/css2?family=Agnifa:wght@400;700&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;600&display=swap"
+  rel="stylesheet"
+/>
+
+
     
     <!-- You can add your own CSS file here -->
     <link href="/styles/main.css" rel="stylesheet">
