--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
   rel="stylesheet"
 />
 
+<!-- Add this line for Font Awesome icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
     
     <!-- You can add your own CSS file here -->
