--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="twitter:title" content="Dream Home Real Estate - Your Trusted Property Partner">
     <meta name="twitter:description" content="Find your dream home with our expert real estate services. We help you buy, sell, and rent properties with ease.">
     
-    <title>Dream Home Real Estate</title>
+    <title>NCC Urban Lake Springs</title>
     
     <!-- Tailwind CSS CDN for quick prototyping -->
     <script src="https://cdn.tailwindcss.com"></script>
